# WirelessGCC

./: CMakeLists.txt  main.cpp  reciever.cpp  trans.cpp
lib/: CMakeLists.txt
lib/gcclib/: CMakeLists.txt  GCconsole.cpp  GCconsole.h  GCcontroller.cpp  GCcontroller.h  GCreport.cpp  GCreport.h  gcclibrary.cpp  gcclibrary.h
lib/gcclib/pio/: joybus.pio  readgcc.pio  writegcc.pio
